--- a/src/index.html
+++ b/src/index.html
@@ -13,4 +13,7 @@
 <body>
   <app-root></app-root>
 </body>
+<script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+
+<script src="assets/index.js"></script>
 </html>
