--- a/src/index.html
+++ b/src/index.html
@@ -15,5 +15,5 @@
 </body>
 <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 
-<script src="assets/index.js"></script>
+<!--<script src="assets/index.js"></script>-->
 </html>
